Update copyright year, add forceclaim command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,5 +11,11 @@ commands:
   claims:
     description: Claims and you; /claims help.
     usage: /claims
+    default: true
   claimFly:
     aliases: [cfly]
+    default: true
+  forceclaim:
+    description: OP-only command to claim stuff
+    usage: /forceclaim [amount]
+    default: op
