Saner state saving
This removes a bit of the redundancy at the benifit of increased error detection.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: Presence
-version: "1.0.0"
+version: ${project.version}
 
 authors: [Geolykt]
 
 main: de.geolykt.presence.PresenceBukkit
-api-version: '1.16'
+api-version: '1.18'
 softdepend: [PlaceholderAPI]
 
 commands:
