Add frontend for chunk group management
Absolute pain to write, but hey, at least it is *finally* done

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,7 +15,6 @@ commands:
   claimFly:
     aliases: [cfly]
     default: true
-  forceclaim:
-    description: OP-only command to claim stuff
-    usage: /forceclaim [amount]
-    default: op
+  chunkgroups:
+    aliases: [cgroup, chunkgroup, groups, claimgroup, claimgroups]
+    description: Manage chunk groups
