--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.geolykt</groupId>
     <artifactId>presence</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0</version>
     <name>Presence</name>
     <description>A presence-based claiming plugin for bukkit</description>
     <inceptionYear>2021</inceptionYear>
@@ -82,6 +82,23 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20211205</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- https://www.eclipse.org/collections -->
+        <!-- This enables us to signfinicantly reduce memory usage-->
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+            <version>11.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections</artifactId>
+            <version>11.0.0</version>
+            <scope>compile</scope>
         </dependency>
 
 
@@ -141,7 +158,11 @@
                     <relocations>
                         <relocation>
                             <pattern>org.json</pattern>
-                            <shadedPattern>de.geolykt.presense.i18n.json</shadedPattern>
+                            <shadedPattern>de.geolykt.presence.i18n.json</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.eclipse.collections</pattern>
+                            <shadedPattern>de.geolykt.presence.common.util.eclipse-collections</shadedPattern>
                         </relocation>
                     </relocations>
                     <filters>
